--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,139 +1,56 @@
-
-@import url("https://fonts.googleapis.com/css2?family=Courgette&family=Josefin+Slab:ital,wght@0,300;0,400;0,700;1,500&family=Patrick+Hand&family=Rubik:wght@400;500;700&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Courgette", cursive;
-}
-
-.card {
-  max-width: 600px;
-  margin: 125px auto;
-  background: white;
-  box-shadow: 0 0 20px rgba(77, 52, 52, 0.6);
-}
-
-.header {
+.container {
   display: flex;
-  justify-content: space-between;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.send {
-  background: none;
-  border: none;
-  font-size: 1.5rem;
-  color: #bd8600;
-  margin-left: 5px;
-}
-
-.refresh-btn {
-  background: none;
-  border: none;
-  font-size: 2rem;
-}
-
-.form-input {
-  height: 2rem;
-  padding-left: 5px;
-  padding-right: 5px;
-  display: flex;
-}
-
-.form-input input {
-  height: 100%;
-  width: 100%;
-  outline: none;
-  font-size: 1.5rem;
-  border-radius: 0.4rem;
-  border: 1px solid #bd8600;
-}
-
-.form-input input::placeholder {
-  color: #bfbfbf;
-  text-align: center;
-}
-
-.todo-div {
-  margin: 20px 25px;
-  display: flex;
-  justify-content: space-between;
-  font-size: 20px;
-  border-bottom: 1px solid #ccc;
-  padding-bottom: 20px;
-}
-
-.task-ul .task {
-  list-style: none;
-  font-size: 1.5rem;
-  margin-bottom: 1.7rem;
-  border-bottom: 1px solid #ccc;
-  padding-bottom: 16px;
-}
-
-li {
-  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
   align-items: center;
-  justify-content: space-between;
 }
-
-label {
+h1 {
+ margin-left: 15%;
+}
+.add-score-div {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
 }
 
-.task label input {
-  margin-top: 0.5rem;
-  margin-right: 20px;
+input {
+  margin-top: 20px;
 }
 
-.task .settings {
-  cursor: pointer;
+#submit-button {
+  margin-top: 30px;
+  background-color: white;
+  outline: black;
+  width: 40%;
+  align-self: flex-end;
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+
+}
+.recent-scores{
+    display: flex;
+    flex-direction: row;
+  
 }
 
-.settings .task-menu {
-  position: absolute;
-  background: #fff;
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
-  padding: 5px 0;
-  z-index: 5;
-  transform: scale(0);
+#refresh{
+    margin-left: 40px;
+    height: 30px;
+    margin-top: 15px;
+    background-color: white;
+    outline: black;
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
-.task:hover .task-menu {
-  transform: scale(1);
+.score-spans{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    border: 2px solid black
 }
 
-.task .task-menu li {
-  height: 2.5rem;
-  padding: 1.6rem 1.5rem;
-  font-size: 1.6rem;
-  margin-bottom: 0.2rem;
-  justify-content: flex-start;
-}
-
-.task-menu li:hover {
-  background: #ccc;
-}
-
-.clear-completed {
-  width: 100%;
-  height: 70px;
-  font-size: 20px;
-}
-
-.message {
-  text-align: center;
-}
-
-.error {
-  color: red;
-  font-size: 2rem;
-}
-
-[contenteditable] {
-  outline: 0 solid transparent;
+.score-spans .each-score:nth-child(odd) {
+    background: rgb(218, 218, 218);
+  }
+.each-score{
+   padding-top: 10px;
 }
