--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,31 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@200;300&family=Josefin+Sans:wght@100&family=Kanit:ital,wght@1,300&family=Kdam+Thmor+Pro&family=Roboto+Mono:wght@100&family=Titillium+Web:wght@200&display=swap');
+
 .container {
   display: flex;
   justify-content: space-around;
   flex-direction: row;
   align-items: center;
 }
-span{
+
+span {
   margin-left: 10px;
 }
 
 input {
   margin-top: 20px;
   font-family: 'Inter', sans-serif;
-
 }
 
 #submit-button {
   margin-top: 30px;
-  background-color:pink;
+  background-color: pink;
   border: none;
   border-radius: 10px;
   margin-right: 50px;
   margin-bottom: 20px;
-  width: 40%;
   height: 50px;
   width: 80px;
-  box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
   align-self: flex-end;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -33,8 +33,8 @@ input {
   -o-border-radius: 10px;
 }
 
-#submit-button:hover{
-  background-color:#002ead;
+#submit-button:hover {
+  background-color: #002ead;
   transition: 0.5s;
   color: white;
   -webkit-transition: 0.5s;
@@ -48,46 +48,39 @@ input {
   flex-direction: row;
 }
 
-
 #refresh {
   margin-top: 10px;
-  background-color:pink;
+  background-color: pink;
   border: none;
   border-radius: 10px;
   margin-left: 50px;
   margin-bottom: 20px;
-  width: 40%;
   height: 50px;
   width: 80px;
-  box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
   align-self: flex-end;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
- 
 }
-h1{
+
+h1 {
   color: blue;
-  text-shadow: pink;
-  
-
 }
 
-h2{
-
-    color: blue;
-    font-family: 'Kdam Thmor Pro', sans-serif;
-    
+h2 {
+  color: blue;
+  font-family: 'Kdam Thmor Pro', sans-serif;
 }
-button{
-  
+
+button {
   font-family: 'Crete Round', serif;
   font-size: 20px;
 }
 
 #refresh:hover {
-  background-color:#002ead;
+  background-color: #002ead;
   transition: 0.5s;
   color: white;
   -webkit-transition: 0.5s;
@@ -96,6 +89,12 @@ button{
   -o-transition: 0.5s;
 }
 
+.each-score {
+  padding-top: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 
 .score-spans {
   display: flex;
@@ -110,27 +109,19 @@ button{
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
+
 .score-spans .each-score:nth-child(even) {
-  background:white;
+  background: white;
   color: black;
- 
-  
-}
-.score-spans .each-score:nth-child(odd) {
-  
-  background:pink;
-  opacity: 92%;
-  color: black;
-  
-}
-.each-score {
-  padding-top: 10px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
 }
 
-.add-score-div{
+.score-spans .each-score:nth-child(odd) {
+  background: pink;
+  opacity: 92%;
+  color: black;
+}
+
+.add-score-div {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -143,16 +134,18 @@ button{
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
-.add-score-div h2{
+
+.add-score-div h2 {
   margin-left: 15px;
 }
 
-#userinput , #score-input{
+#userinput,
+#score-input {
   padding: 10px;
   border-radius: 10px;
   width: 70%;
   margin-left: 45px;
-  box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
